--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,48 @@
     --app-color: #145DA0;
     --text-color: black;
     --button-color: #2E8BC0;
-    --display-bg: #B1D4E0;
+    --button-color-hover: #2878a7;
+    --display-bg: #55b0cf;
 }
 
+body {
+    color: var(--text-color);
+    background-color: var(--bg-color);
+    font-size: 1.2rem;
+}
+
+.app {
+    margin: 0 auto;
+    margin-top: 200px;
+    background-color: var(--app-color);
+    max-width: fit-content;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.display {
+    align-self: center;
+    background-color: var(--display-bg);
+    width: 90%;
+    text-align: right;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 1px 15px;
+    border-radius: 3px;
+}
+
+button {
+    all: unset;
+    background-color: var(--button-color);
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.73);
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: var(--button-color-hover);
+}
