--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,15 @@ body {
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    border-radius: 2px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.73);
 }
 
 .display {
     align-self: center;
     background-color: var(--display-bg);
     width: 90%;
+    height: 100px;
     text-align: right;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -34,13 +37,24 @@ body {
     border-radius: 3px;
 }
 
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 65px);
+    grid-template-rows: repeat(5, 65px);
+    gap: 5px;
+}
+
+#equal {
+    grid-column: span 4;
+}
+
+
+
 button {
     all: unset;
     background-color: var(--button-color);
     border-radius: 3px;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.73);
-    width: 40px;
-    height: 40px;
     text-align: center;
     cursor: pointer;
 }
