--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,10 @@ body {
     margin-top: 200px;
     background-color: var(--app-color);
     max-width: fit-content;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     display: flex;
     flex-direction: column;
-    border-radius: 2px;
+    border-radius: 5px;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.73);
 }
 
@@ -41,7 +41,7 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 65px);
     grid-template-rows: repeat(5, 65px);
-    gap: 5px;
+    gap: 8px;
 }
 
 #equal {
