--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,13 @@ button {
 button:hover {
     background-color: var(--button-color-hover);
 }
+
+.input {
+    min-height: 1em;
+    display: block;
+}
+
+.display p {
+    font-size: 1.5rem;
+    line-height: 0;
+}
